Created page with "== Introduction == For 64bit systems it is sometimes necessary to execute 32bit binaries, e.g. if the application is only available as 32bit binary like Opera, Steam, Windows ..."

--- a/Multilib_System_without_emul-linux_Packages.mw
+++ b/Multilib_System_without_emul-linux_Packages.mw
@@ -1,11 +1,3 @@
-{{Dated|date=Mar 28, 2015}}
-== Why this article is outdated ==
-Read the news item: <br />
-[[https://gentoo.org/support/news-items/2015-03-28-true-multilib.html]]
-
-== Where to find updated information ==<br />
-Read the Project Wiki page: [[https://wiki.gentoo.org/wiki/Project:Multilib/Concepts]]
-
 == Introduction ==
 For 64bit systems it is sometimes necessary to execute 32bit binaries, e.g. if the application is only available as 32bit binary like Opera, Steam, Windows applications and games via wine, ...
 To achieve this, Gentoo has a multilib profile which offers some emul-linux packages that bundle some 32bit libraries.
@@ -38,24 +30,19 @@ Removing overlay packages depends on what you have installed so it cannot be han
 === Remove emul-linux and all dependencies ===
 To find out which packages depend on emul-linux packages, you can use the following shell command: 
 {{RootCmd|for EMUL in $(eix -I --only-names emul-linux); do equery depends $EMUL; done}}
-Note which packages were printed, then unmerge them. Gcc might be seen among those packages because of its multilib flag and, of course, do NOT unmerge GCC.
+Note which packages were printed, then unmerge them.
 
 Execute
 {{RootCmd|eix -I --only-names emul-linux}} to know which emul-packages you had installed, open http://dev.gentoo.org/~pacho/emul.html and open the linked site listing the contents of the emul-packages.
 Now unmerge all emul-packages and mask them by adding them to {{Path|/etc/portage/package.mask}}
-{{FileBox|filename=/etc/portage/package.mask|title=Masking all emul-linux packages|1=
+{{File|/etc/portage/package.mask|Masking all emul-linux packages|<pre>
 # mask emul-linux
 app-emulation/emul-linux-x86-*
-}}
+</pre>}}
 
 === Apply the abi_x86_32 flag ===
-First, unmask abi_x86_32 flag by putting the following in {{Path|/etc/portage/profile/use.mask}}. If the file does not exist, create it.
-{{FileBox|filename=/etc/portage/profile/use.mask|title=Unmasking abi_x86_32 flag|1=
--abi_x86_32 
-}}
-
-Then, open {{Path|/etc/portage/package.use}}, append all package names from the site to it and append to every package name the flag ''abi_x86_32'', like so:
-{{FileBox|filename=/etc/portage/package.use|title=Setting abi_x86_32|1=
+Open {{Path|/etc/portage/package.use}}, append all package names from the site to it and append to every package name the flag ''abi_x86_32'', like so:
+{{File|/etc/portage/package.use|Setting abi_x86_32|<pre>
 # app-emulation/emul-linux-x86-baselibs-20140508-r14  USE="development kerberos ldap pam" ABI_X86="-32" 39,395 kB
 app-admin/gamin abi_x86_32
 app-arch/bzip2 abi_x86_32
@@ -256,19 +243,19 @@ x11-libs/libpciaccess abi_x86_32
 x11-libs/libvdpau abi_x86_32
 x11-libs/libxcb abi_x86_32
 x11-proto/scrnsaverproto abi_x86_32
-}}
+</pre>}}
 It does not matter if you need or want all these packages, just set the flag in case it gets emerged.
 I also added
-{{FileBox|filename=/etc/portage/package.use|title=Setting abi_x86_32 for wine|1=
+{{File|/etc/portage/package.use|Setting abi_x86_32 for wine|<pre>
 app-emulation/wine abi_x86_32
-}}
+</pre>}}
 because my main motivation was to play games via wine and mostly every commercial Windows game comes as 32bit binary.
 
 === Update the System ===
 Emerge everything that changed:
 {{RootCmd|emerge <nowiki>--keep-going --update --newuse --deep --with-bdeps=y world</nowiki>}}. It is imperative to emerge with dependency and newuse checks.
 If emerge complains about missing useflags for some packages (it probably will!), add them to the /etc/portage/package.use file like you did for the emul-linux packages. In my case I needed to add
-{{FileBox|filename=/etc/portage/package.use|title=Setting additional abi_x86_32 flags - EXAMPLE|1=
+{{File|/etc/portage/package.use|Setting additional abi_x86_32 flags - EXAMPLE|<pre>
 dev-util/pkgconfig abi_x86_32
 x11-proto/dri2proto abi_x86_32
 x11-proto/xf86vidmodeproto abi_x86_32
@@ -321,15 +308,9 @@ x11-proto/damageproto abi_x86_32
 x11-proto/kbproto abi_x86_32
 sys-devel/flex abi_x86_32
 x11-proto/fixesproto abi_x86_32
-}}
+</pre>}}
 but the exact list will most likely depend on your USE-flags and will vary!
 
 After all has been rebuilt, it is a good idea to restart the system or at least X. Then emerge all applications that needed emul-linux packages before. If something still depends on these packages now, fill out a bug.
-
-=== GNU Compiler Collection special case ===
-The above will successed untill recompiling {{Package|sys-devel/gcc}} is required and reached. This may happen dependending on sys-devel/gcc[$USE] USE flags because the toolchain herd did not yet resolve {{Bug|511832}} for quite some time now. The associated patch may be an ovrkill but the fix seems almost too easy. So follow the next sub section for a workaround.
-
-=== Dead END ===
-After following the previous steps one will get in a dead end with various packages depending on emulation packages not yet converted to the newer multilib variant. So, to not waste such an effort after so much trouble to get emul cruft out of the system, a workaround is to create ''/etc/portage/profile'', if not already created, and add the emuluation packages pulled in by those remaining dependencies, like GNU Compiler Collection case, in ''package.provided''. At this point, one should be fine to go for the time being. Untill those problematic packages get converted to the new multilib standard, this workaround will remain a safe net avoiding the numerous issues related to having emulation packages when using ~arch or simply for performance related issues.
 
 [[Category:Core system]]
