--- a/Pkgcore.mw
+++ b/Pkgcore.mw
@@ -1,65 +1,6 @@
-{{lowercase title}}
-{{InfoBox stack
-|{{InfoBox homepage|http://www.pkgcore.org/|header=true}}
-|{{InfoBox github|pkgcore/pkgcore}}
-}}
-
-'''pkgcore''' is [[Article description::an alternative package manager for Gentoo that aims for high performance, extensibility, and a clean design.]] Written in Python, pkgcore also subsumes most of the functionality of the {{c|[[eix]]}} and {{c|[[layman]]}} repository management tools.
-
-pkgcore is written and maintained by Gentoo developer {{Dev|radhermit}}.
-
-{{Warning|pkgcore support for EAPI 5 is still experimental.}}
-
-== Installation ==
-
-=== Emerge ===
-
-The the {{c|emerge}} command:
-
-{{Emerge|sys-apps/pkgcore}}
-
-== Configuration ==
-
-If there is no specific pkgcore configuration (that is {{Path|/etc/pkgcore.conf}} or {{Path|~/.pkgcore.conf}}) it reads the Portage configuration and converts it transparently for use. For a detailed explanation of how the pkgcore specific configuration works see [[Pkgcore/Configuration]].
-
-== Usage ==
-
-=== Updating the system ===
-
-For synchronizing the local copies of the Portage tree and any overlays the {{c|pmaint}} utility is used. Then {{c|pmerge}} is invoked to update all packages and clean superfluous packages.
-
-{{RootCmd|pmaint sync
-|pmerge --ask --upgrade --deep --newuse
-|pmerge --ask --clean --with-built-deps
-}}
-
-=== Searching and installing a package ===
-
-To search for a package use the pquery program:
-
-{{Cmd|pquery -nv <query>}}
-
-For example to find some audio software for encoding {{Path|ogg}} files one may use the following to find {{Package|media-sound/vorbis-tools}}.
-
-{{Cmd|pquery -nv --description ogg 'media-sound/*'}}
-
-{{Note|Note the quotes around the extended atom to protect from expansion by the shell.}}
-
-Then install the new package with {{c|pmerge}}:
-
-{{RootCmd|pmerge --ask --verbose <atoms>}}
-
-In our example this would be the following:
-
-{{RootCmd|pmerge --ask --verbose media-sound/vorbis-tools}}
-
-== Removal ==
-
-{{Unmerge|sys-apps/pkgcore}}
+{{Package|sys-apps/pkgcore}} is an alternative package manager for Gentoo, similar to [[Portage]]. It aims for high performance, good extensibility and a clean design.
 
 == See also ==
 
-* {{See also|Portage}}
-* {{See also|Paludis}}
-
-[[Category:Software]]
+* [https://github.com/pkgcore/pkgcore Pkgcore project on github]
+* [http://www.pkgcore.org/ Pkgcore online documentation]
