--- a/Udev%2Fes.mw
+++ b/Udev%2Fes.mw
@@ -1,176 +1,169 @@
 <languages />
-<div class="mw-translate-fuzzy">
-{{Metadata|abstract=udev es el gestor de dispositivos para el núcleo Linux. Gestiona los nodos de dispositivo en /dev y también todos las acciones en espacio de usuario cuando se añaden o eliminan dispositivos.}}
-</div>
+
+
+{{Metadata|abstract=udev is the device manager for the Linux kernel. It manages device nodes in /dev and handles all user space actions when adding/removing devices.}}
 
 {{Lowercase title}}
 {{InfoBox stack
-|{{InfoBox homepage|https://www.freedesktop.org/wiki/Software/systemd/|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox gitweb|https://cgit.freedesktop.org/systemd/systemd/tree/src/udev|raw=true}}
-|{{InfoBox project|Udev}}
+|{{InfoBox wikipedia|header=true}}
 }}
 
-{{Confused|eudev}}
+'''udev''' is the device manager for the Linux kernel. Primarily, it manages device nodes in {{Path|/dev}} and handles all user space actions when adding/removing devices. Also have a look at [http://www.gentoo.org/proj/en/eudev eudev], a fork of udev.
 
-<div class="mw-translate-fuzzy">
-'''udev''' es el gestor de dispositivos para el núcleo Linux. Gestiona los nodos de dispositivo en {{Path|/dev}} y también todos las acciones en espacio de usuario cuando se añaden o eliminan dispositivos. El lector debería también echar un vistazo a [Project:Eudev|eudev] una bifurcación de udev.
-</div>
+== What is udev? ==
 
-== ¿Qué es udev? ==
+=== The /dev directory ===
 
-=== El directorio /dev ===
+When Linux-users talk about the hardware on their system in the vicinity of people who believe Linux is some sort of virus or brand of coffee, the use of "slash dev slash foo" will return a strange look for sure. But for the fortunate user (and that includes you) using {{Path|/dev/sda1}} is just a fast way of explaining that we are talking about the primary master SATA, first partition. Or aren't we? 
 
-{{:/dev/en}}
+We all know what a device file is. Some even know why device files have special numbers when we take a closer look at them when we issue <code>ls -l</code> in {{Path|/dev}}. But what we always take for granted is that the primary SATA disk is referred to as {{Path|/dev/sda}}. You might not see it this way, but this is a flaw by design. 
 
-== Instalación ==
+Think about hotpluggable devices like USB, IEEE1394, hot-swappable PCI, ... What is the first device? And for how long? What will the other devices be named when the first one disappears? How will that affect ongoing transactions? Wouldn't it be fun that a printing job is suddenly moved from your supernew laserprinter to your almost-dead matrix printer because your mom decided to pull the plug of the laserprinter which happened to be the first printer? 
 
-{{Important|Cuando actualice udev, eche un vistazo a [[Udev/Upgrade Guide|guía de actualización de udev]] para obtener información sobre cómo evitar que los sistemas no inicien.}}
+Enter ''udev''. The goals of the udev project are both interesting and needed:
 
-=== Núcleo ===
+* Runs in userspace
+* Dynamically creates/removes device files
+* Provides consistent naming
+* Provides a user-space API
 
-{{c|udev}} necesita las siguientes opciones del núcleo:
+Every time a change happens within the device structure, the kernel emits a ''uevent'' which gets picked up by udev. udev then follows the rules as declared in the {{Path|/etc/udev/rules.d}}, {{Path|/run/udev/rules.d}} and {{Path|/lib/udev/rules.d}} directories. Based on the information contained within the uevent, it finds the rule or rules it needs to trigger and performs the required actions. These actions can be creating or deleting device files, but can also trigger the loading of particular firmware files into the kernel memory.
 
-<!-- Mirar en https://git.kernel.org/?p=linux/hotplug/udev.git;a=blob_plain;f=README -->
-{{KernelBox|1=
-General setup --->
-  [*] Configure standard kernel features (expert users) --->
-     [ ] Enable deprecated sysfs features to support old userspace tools
-     [*] Enable signalfd() system call
-Enable the block layer --->
-  [*] Block layer SG support v4
-Networking support --->
-  Networking options --->
-     <*> Unix domain sockets
-Device Drivers --->
-  Generic Driver Options --->
-     () path to uevent helper
-     [*] Maintain a devtmpfs filesystem to mount at /dev
-  < > ATA/ATAPI/MFM/RLL support (DEPRECATED) --->
-File systems --->
-  [*] Inotify support for userspace
-  Pseudo filesystems --->
-     [*] /proc file system support
-     [*] sysfs file system support
+== Installation ==
+
+{{Note|If you're updating, check the [[/upgrade|upgrade subpage]].}}
+
+=== Kernel ===
+
+You need to activate the following kernel options:
+
+<!-- See http://git.kernel.org/?p=linux/hotplug/udev.git;a=blob_plain;f=README -->
+{{Kernel||<pre>
+General setup  --->
+    [*] Configure standard kernel features (expert users)  --->
+        [ ] Enable deprecated sysfs features to support old userspace tools
+        [*] Enable signalfd() system call
+Enable the block layer  --->
+    [*] Block layer SG support v4
+Networking support  --->
+    Networking options  --->
+        <*> Unix domain sockets
+Device Drivers  --->
+    Generic Driver Options  --->
+        ()  path to uevent helper
+        [*] Maintain a devtmpfs filesystem to mount at /dev
+    < > ATA/ATAPI/MFM/RLL support (DEPRECATED)  --->
+File systems  --->
+    [*] Inotify support for userspace
+    Pseudo filesystems --->
+        [*] /proc file system support
+        [*] sysfs file system support
+</pre>}}
+
+=== Software ===
+
+Portage knows the global USE flag ''udev'' for enabling support for udev in other packages. Enabling this USE flag (default in all ''linux'' [[profile]]s) will pull in {{Package|sys-fs/udev}} automatically:
+
+{{File|/etc/portage/make.conf||<pre>
+USE="... udev ..."
+</pre>}}
+
+The USE flags of udev are:
+
+{{USEflag|package=sys-fs/udev
+|acl+yes
+|doc
+|firmware-loader+yes
+|gudev+yes
+|introspection+yes
+|kmod+yes
+|openrc+yes
+|selinux++no
+|static-libs++no
 }}
 
-=== Ajustes USE ===
-
-Portage reconoce el ajuste USE global <code>udev</code> para habilitar el soporte de udev en otros paquetes. Al añadir este ajuste USE a la lista de ajustes (se realiza por defecto en todos los [[Profile (Portage)|perfiles]]) se instalará automáticamente el paquete {{Package|sys-fs/udev}}:
-
-{{FileBox|filename=/etc/portage/make.conf|lang=bash|1=
-USE="udev"
-}}
-
-{{USEflag|package=sys-fs/udev}}
-
-=== Emerge ===
-
-Después de definir los ajustes USE, seguramente se desee actualizar el sistema para que los cambios tengan efecto:
+After setting this you want to update your system so the changes take effect:
 
 {{Emerge|params+=--changed-use --deep|@world}}
 
-== Configuración ==
+== Configuration ==
 
-=== Servicio ===
+=== Service ===
 
-Para arrancar udev en el inicio del sistema, añádalo al nivel de ejecución sysinit. Esto se puede hacer lanzando la siguiente orden con privilegios de root:
-
+To start udev at boot time, add it your sysinit runlevel:
 {{RootCmd|rc-update add udev sysinit}}
 
-=== Keep classic 'eth0' naming ===
+== Advanced Configuration ==
 
-{{:Eudev/Network_device_names/en}}
+=== Rules ===
 
-== Configuración avanzada ==
+udev provides a set of rules that match against exported values of uevents (events sent by the kernel) and properties of the discovered device. A matching rule will possibly name and create a device node and run configured programs to set-up and configure the device.
 
-=== Reglas ===
+The rule definitions are stored in {{Path|/lib/udev/rules.d}} (installed by packages) and {{Path|/etc/udev/rules.d}} (for end-user specified rules). In these directories, multiple rule files (with suffix {{Path|.rules}}) are traversed in alphanumerical order. Inside the rules files, udev will find expressions that might match a uevent together with the state to match (is the uevent because a device is added or removed) and the command to execute.
 
-Udev ofrece un conjunto de reglas que concuerdan con los valores exportados de los uevents (eventos enviados por el núcleo) y las propiedades del dispositivo que se ha descubierto. Una regla que concuerda posiblemente creará y nombrará un nodo de dispositivo y lanzará los programas definidos para poner en marcha y configurar el dispositivo.
+The event matching is based on information such as:
+* the ''SUBSYSTEM'' of the uevent (for which type of device is the uevent fired)
+* the ''ACTION'' that is taken (add, change or remove)
+* one or more attributes (through ''ATTR'' or ''ATTRS''), such as the device class, vendor or other device information
+* the kernel-provided name (through ''KERNEL''), such as sd* (for SCSI/SATA disks) or input* (for input devices such as mice and keyboards)
+* one or more environment settings (through ''ENV''), used to send information between multiple rules
 
-Las definiciones de las reglas se almacenan en dos localizaciones:
+Based on this information, the rule can then state if 
+* some information needs to be shared with later events (through environment variables)
+* links need to be created in {{Path|/dev}}
+* commands need to be executed
 
-# '''{{Path|/lib/udev/rules.d/}}'''. Las reglas en este directorio son instaladas por determinados paquetes, normalmente los usuarios no deberían cambiarlas.
-# '''{{Path|/etc/udev/rules.d/}}'''. Este directorio es para las reglas especificadas por los usuarios finales. Cualquier nueva regla se debe añadir en este directorio.
+Udev does this for every rule that matches (so it does not stop after the first match) to allow a flexible device management approach.
 
-En estos directorios se recorren en orden alfabético múltiples ficheros de reglas (con el sufijo {{Path|.rules}}), udev buscará expresiones que concuerden con un uevent y con el estado definido (es el uevent debido que se ha añadido o retirado un dispositivo) y la orden a ejecutar.
+=== Persistent device names ===
 
-La concordancia del evento se basa en información como:
+The kernel detects devices asynchronous, udev mirrors the kernel's [[sysfs]] filesystem and so the device are named and numbered in order of detection. So by default udev provides no persistent device names. However there are mechanismen for some device classes to provide these:
 
-* El ''SUBSYSTEM'' del uevent (para qué tipo de dispositivo se dispara el uevent).
-* La ''ACTION'' que se realiza (añadir, cambiar o eliminar).
-* Uno o más atributos (a través de ''ATTR'' o ''ATTRS''), tales como la clase del dispositivo, el fabricante u otra información del dispositivo.
-* El nombre que ofrece el núcleo (a través de ''KERNEL''), como sd* (para los discos SCSI/SATA) o input* (para dispositivos de entrada como ratones y teclados)
-* Uno o más ajustes de entorno (a través de ''ENV''), utilizados para enviar información entre múltiples reglas.
+* udev creates for storage devices additional symlinks based on the device's id, label, uuid and path. See the {{Path|/dev/disk/by-*}} directory. So instead of using e.g. the device file {{Path|/dev/sda}} use the file {{Path|/dev/disk/by-label/SOME_LABEL}}.
 
-Basándose en esta información, la regla puede entonces comprobar sí:
+* The same for input devices in the {{Path|/dev/input}} directory.
 
-# Se necesita compartir alguna información con eventos posteriores (a través de variables de entorno)
-# Se necesita crear enlaces en {{Path|/dev}}
-# Se necesita lanzar alguna orden
+* Using custom rules you can create your own device files.
 
-Udev realiza esto para cada regla que concuerda (por lo que no se detiene en la primera concordancia) para permitir un enfoque flexible de gestión de los dispositivos.
+== Usage ==
 
-=== Nombres persistentes de dispositivos ===
+Some useful commands are:
 
-El núcleo detecta los dispositivos de forma asíncrona. Udev crea un reflejo del sistema de ficheros del núcleo [[sysfs]] y por lo tanto los dispositivos se nombran y numeran en el orden de su detección. Así, por defecto udev no ofrece nombres persistentes de los dispositivos. Sin embargo, existen mecanismos de algunas clases de dispositivo para ofrecerlos:
+* Show all messages about a given device file:
+: {{RootCmd|udevadm info --query{{=}}all --name{{=}}/dev/DEVICE_FILE}}
 
-* Udev crea enlaces simbólicos adicionales para los dispositivos de almacenamiento basándose en el identificador (ID), [[Removable_media#UUIDs_and_labels|la etiqeta, el UUID]] y la ruta del dispositivo. Eche un vistazo al directorio {{Path|/dev/disk/by-*}}. Por lo que, por ejemplo, en lugar de utilizar el archivo de dispositivo {{Path|/dev/sda}} utiliza el fichero {{Path|/dev/disk/by-label/ALGUNA_ETIQUETA}}.
+* Monitor udev activities:
+: {{RootCmd|udevadm monitor}}
 
-* Lo mismo aplica para los dispositivos de entrada en el directorio {{Path|/dev/input}}.
+See the ''udevadm'' [[man page]] for more information.
 
-* Usando reglas propias los usuarios pueden crear sus propios ficheros de dispositivo.
-
-== Utilización ==
-
-Algunas órdenes útiles son las siguientes:
-
-* Mostrar todos los mensajes sobre un determinado archivo de dispositivo: : {{RootCmd|udevadm info --query{{=}}all --name{{=}}/dev/FICHERO_DE_DISPOSITIVO}}
-
-* Monitorizar las actividades de udev: {{RootCmd|udevadm monitor}}
-
-<div class="mw-translate-fuzzy">
-* Asignar un nombre persistente a un dispositivo ethernet:
-: {{FileBox|filename=/etc/udev/rules.d/ethernet.rules|lang=bash|1=
-SUBSYSTEM=="net", ACTION=="add", ATTR{address}=="01:23:45:67:89:ab", NAME="eth6789ab"
-}}
-</div>
-
-Lea la [[man page|página del manual]] de ''udevadm'' para más información.
-
-== Resolución de problemas ==
+== Troubleshooting ==
 
 * {{Bug|udev|search=package}}
 
-=== Registrar mensajes del monitor ===
+=== Log monitor messages ===
 
-Para registrar todos los mensajes cuando se lanza {{c|udevadm monitor}}, se debe modificar el siguiente fichero de configuración:
+Log all message you see, when you run '''udevadm monitor''':
 
-{{FileBox|filename=/etc/conf.d/udev|lang=bash|1=
+{{File|/etc/conf.d/udev||<pre>
 udev_monitor="YES"
-}}
+</pre>}}
 
-Se creará un el nuevo fichero de registro localizado en {{Path|/run/udev/udevmonitor.log}}.
+It will create the new log file {{Path|/run/udev/udevmonitor.log}}.
 
-=== Modo depuración ===
+=== Debug mode ===
 
-Habilitar el modo depuración permitirá mostrar más mensajes de registro:
+Enable debug mode to get more log messages:
 
-{{FileBox|filename=/etc/conf.d/udev|lang=bash|1=
+{{File|/etc/conf.d/udev||<pre>
 udev_debug="YES"
-}}
+</pre>}}
 
-Defina la prioridad del registro:
+It will create the new log file {{Path|/run/udev/udevdebug.log}}.
 
-{{FileBox|filename=/etc/udev/udev.conf|lang=bash|1=
-udev_log="debug"
-}}
+=== Missing device files {{Path|/dev/null}} and {{Path|/dev/console}} ===
 
-Se creará el fichero de registro {{Path|/run/udevdebug.log}} pero no se mostrarán mensajes en él. Las versiones más recientes de udev mostrarán todos los mensajes en {{c|dmesg}}.
-
-=== Faltan los ficheros de dispositivo {{Path|/dev/null}} y {{Path|/dev/console}} ===
-
-Algunas versiones de udev necesitan los ficheros {{Path|/dev/null}} y {{Path|/dev/console}} para funcionar correctamente pero no pueden crearlos ellos mismos. Para crear manualmente estos ficheros por udev, lance las siguientes ordenes con privilegios de root:
+Some udev versions need these files and can't create them on their own. So you have to create them:
 
 {{RootCmd
 |mkdir test
@@ -183,30 +176,14 @@ Algunas versiones de udev necesitan los ficheros {{Path|/dev/null}} y {{Path|/de
 |rmdir test
 }}
 
-=== NIC asignada a eth0 pero se mueve a eth1 ===
+=== NIC assigned eth0, but is moved to eth1 ===
 
-En las placas base con dos tarjetas de red puede suceder que {{c|ifconfig}} no muestre ni eth0 ni eth1. La orden {{c|dmesg}} puede mostrar las NIC detectadas como eth0 y luego cambiar a eth1. Al realizar un {{c|ifconfig -a}} también se mostrar la NIC como eth1. Esto es debido a que el núcleo asigna estos nombres en primer lugar. Los usuarios deben escribir sus propias reglas personalizadas como {{Path|/etc/udev/rules.d/70-my-network.rules}} para usar los nombres que elija como lan0 o wireless0 o utilizar los nombres predecibles para las interfaces (que se han habilitado por defecto a partir de la versión 197 de udev).
+Those having dual network cards on their motherboards may run into a situation where ifconfig may show no eth0 or eth1.  Dmesg may show their NIC detected as eth0, and later moved to eth1. Performing a "ifconfig -a" will also show the NIC as eth1. This is caused by using the kernel assigned names in the first place. You should write your own rules like {{Path|/etc/udev/rules.d/70-my-network.rules}} to
+use free names like lan0 or wireless0 or use the predictable interface names which are enabled by the default since version 197.
 
-Recuerde también eliminar los ficheros antiguos de las versiones anteriores de udev:
+Remember to also remove old files from old versions of udev:
 
-{{RootCmd|rm /etc/udev/rules.d/70-persistent-net.rules /etc/systemd/network/99-default.link}}
-
-<div class="mw-translate-fuzzy">
-Asegúrese también de no pasar <code>net.ifnames=0</code> en la línea de órdenes del núcleo. Este ajuste desactivaría la característica de nombres predecibles de dispositivo para todo el sistema udev.
-</div>
-
-== Ver también ==.
-
-<div class="mw-translate-fuzzy">
-== Recursos externos ==
-* [http://cgit.freedesktop.org/systemd/systemd/tree/src/udev Código fuente de udev]
-</div>
-
-== Recursos externos ==
-
-<div class="mw-translate-fuzzy">
-{{Bug|575718|text=Bug 575718 - Petición para que el consejo decida en relación al proveedor por defecto de virtual/udev}} - Proveedor por defecto de virtual/udev  ha cambiado a sys-fs/eudev
-</div>
+{{RootCmd|rm /etc/udev/rules.d/70-persistent-net.rules}}
 
 
 [[Category:Core system]]
