--- a/Udev%2Ffr.mw
+++ b/Udev%2Ffr.mw
@@ -1,34 +1,44 @@
 <languages />
-{{Metadata|abstract=udev est le gestionnaire de périphériques pour le noyau Linux. Il administre les nœuds de périphériques dans /dev et prend en charge toutes les actions de l'espace utilisateur lors de l'ajout ou de la suppression de périphériques. }}
+
+
+{{Metadata|abstract=udev is the device manager for the Linux kernel. It manages device nodes in /dev and handles all user space actions when adding/removing devices.}}
 
 {{Lowercase title}}
 {{InfoBox stack
-|{{InfoBox homepage|https://www.freedesktop.org/wiki/Software/systemd/|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox gitweb|https://cgit.freedesktop.org/systemd/systemd/tree/src/udev|raw=true}}
-|{{InfoBox project|Udev}}
+|{{InfoBox wikipedia|header=true}}
 }}
 
-{{Confused|eudev}}
+'''udev''' is the device manager for the Linux kernel. Primarily, it manages device nodes in {{Path|/dev}} and handles all user space actions when adding/removing devices. Also have a look at [[Project:Eudev|eudev]], a fork of udev.
 
-'''udev''' (user {{Path|/dev}}) est le gestionnaire de périphériques pour le noyau de Linux. Il gère les nœuds de périphériques dans {{Path|/dev}} et prend en charge toutes les actions dans l'espace utilisateur lors de l'ajout ou de la suppression de périphériques. Les lecteurs de cet article devraient également lire [[Project:Eudev|eudev]], une dérivation de udev.
+== What is udev? ==
 
-== Qu'est-ce que udev? ==
+=== The /dev directory ===
 
-=== Le répertoire /dev  ===
+When Linux-users talk about the hardware on their system in the vicinity of people who believe Linux is some sort of virus or brand of coffee, the use of "slash dev slash foo" will return a strange look for sure. But for the fortunate user (and that includes you) using {{Path|/dev/sda1}} is just a fast way of explaining that we are talking about the primary master SATA, first partition. Or aren't we? 
 
-{{:/dev/fr}}
+We all know what a device file is. Some even know why device files have special numbers when we take a closer look at them when we issue <code>ls -l</code> in {{Path|/dev}}. But what we always take for granted is that the primary SATA disk is referred to as {{Path|/dev/sda}}. You might not see it this way, but this is a flaw by design. 
+
+Think about hotpluggable devices like USB, IEEE1394, hot-swappable PCI, ... What is the first device? And for how long? What will the other devices be named when the first one disappears? How will that affect ongoing transactions? Wouldn't it be fun that a printing job is suddenly moved from your supernew laserprinter to your almost-dead matrix printer because your mom decided to pull the plug of the laserprinter which happened to be the first printer? 
+
+Enter ''udev''. The goals of the udev project are both interesting and needed:
+
+* Runs in userspace
+* Dynamically creates/removes device files
+* Provides consistent naming
+* Provides a user-space API
+
+Every time a change happens within the device structure, the kernel emits a ''uevent'' which gets picked up by udev. udev then follows the rules as declared in the {{Path|/etc/udev/rules.d}}, {{Path|/run/udev/rules.d}} and {{Path|/lib/udev/rules.d}} directories. Based on the information contained within the uevent, it finds the rule or rules it needs to trigger and performs the required actions. These actions can be creating or deleting device files, but can also trigger the loading of particular firmware files into the kernel memory.
 
 == Installation ==
 
-{{Important| Avant faire une mise à jour, consulter le [[Udev/Upgrade_Guide|guide de mise à jour de udev (Anglais)]] pour plus d'information afin d'éviter de se retrouver avec un système qui ne démarre plus.}}
+{{Note|If you're updating, check the [[/upgrade|upgrade subpage]].}}
 
-=== Noyau ===
+=== Kernel ===
 
-{{c|udev}} nécessite les options suivantes dans le noyau :
+You need to activate the following kernel options:
 
-<!-- See https://git.kernel.org/?p=linux/hotplug/udev.git;a=blob_plain;f=README -->
-{{KernelBox|1=
+<!-- See http://git.kernel.org/?p=linux/hotplug/udev.git;a=blob_plain;f=README -->
+{{Kernel||<pre>
 General setup  --->
     [*] Configure standard kernel features (expert users)  --->
         [ ] Enable deprecated sysfs features to support old userspace tools
@@ -48,21 +58,31 @@ File systems  --->
     Pseudo filesystems --->
         [*] /proc file system support
         [*] sysfs file system support
+</pre>}}
+
+=== Software ===
+
+Portage knows the global USE flag ''udev'' for enabling support for udev in other packages. Enabling this USE flag (default in all ''linux'' [[profile]]s) will pull in {{Package|sys-fs/udev}} automatically:
+
+{{File|/etc/portage/make.conf||<pre>
+USE="... udev ..."
+</pre>}}
+
+The USE flags of udev are:
+
+{{USEflag|package=sys-fs/udev
+|acl+yes
+|doc
+|firmware-loader+yes
+|gudev+yes
+|introspection+yes
+|kmod+yes
+|openrc+yes
+|selinux++no
+|static-libs++no
 }}
 
-=== Options de la variable USE ===
-
-Portage connaît l'option globale de la variable USE <code>udev</code> pour activer la prise en charge de udev dans les autres paquets. Activer cette option de la variable USE (par défaut dans tous les [[Profile (Portage)|profiles]] Linux) provoquera l'installation du paquet {{Package|sys-fs/udev}} automatiquement.
-
-{{FileBox|filename=/etc/portage/make.conf|lang=bash|1=
-USE="udev"
-}}
-
-{{USEflag|package=sys-fs/udev}}
-
-=== Emerge ===
-
-Après avoir défini les options de la variable USE, mettre à jour le système  pour que les changements prennent effet :
+After setting this you want to update your system so the changes take effect:
 
 {{Emerge|params+=--changed-use --deep|@world}}
 
@@ -70,105 +90,80 @@ Après avoir défini les options de la variable USE, mettre à jour le système 
 
 === Service ===
 
-Pour démarrer udev au démarrage de la machine, l'ajouter au niveau d'exécution sysinit. Pour cela, exécuter la commande suivant en tant que root :
-
+To start udev at boot time, add it your sysinit runlevel:
 {{RootCmd|rc-update add udev sysinit}}
 
-=== Conserver le nommage traditionnel de 'eth0' ===
+== Advanced Configuration ==
 
-{{:Eudev/Network_device_names/fr}}
+=== Rules ===
 
-== Configuration avancée ==
+udev provides a set of rules that match against exported values of uevents (events sent by the kernel) and properties of the discovered device. A matching rule will possibly name and create a device node and run configured programs to set-up and configure the device.
 
-=== Règles ===
+The rule definitions are stored in {{Path|/lib/udev/rules.d}} (installed by packages) and {{Path|/etc/udev/rules.d}} (for end-user specified rules). In these directories, multiple rule files (with suffix {{Path|.rules}}) are traversed in alphanumerical order. Inside the rules files, udev will find expressions that might match a uevent together with the state to match (is the uevent because a device is added or removed) and the command to execute.
 
-udev fournit un jeu de règles qui correspondent aux valeurs exportées des uevents (événements provoqués par le noyau) et aux propriétés du périphérique découvert. Possiblement, une règle ayant une correspondance nommera et créera un nœud de périphérique et exécutera des programmes configurés pour installer et configurer le périphérique.
+The event matching is based on information such as:
+* the ''SUBSYSTEM'' of the uevent (for which type of device is the uevent fired)
+* the ''ACTION'' that is taken (add, change or remove)
+* one or more attributes (through ''ATTR'' or ''ATTRS''), such as the device class, vendor or other device information
+* the kernel-provided name (through ''KERNEL''), such as sd* (for SCSI/SATA disks) or input* (for input devices such as mice and keyboards)
+* one or more environment settings (through ''ENV''), used to send information between multiple rules
 
-Les définitions des règles sont stockées à deux emplacements :
+Based on this information, the rule can then state if 
+* some information needs to be shared with later events (through environment variables)
+* links need to be created in {{Path|/dev}}
+* commands need to be executed
 
-# '''{{Path|/lib/udev/rules.d/}}''' - Les règles dans ce répertoire sont installées par certains paquets, elles ne doivent en général pas être modifiées par les utilisateurs;
-# '''{{Path|/etc/udev/rules.d/}}''' - Ce répertoire est pour les règles définies par les utilisateurs. Chaque nouvelle règle doit être ajoutée dans ce répertoire;;
+Udev does this for every rule that matches (so it does not stop after the first match) to allow a flexible device management approach.
 
-Dans ces répertoires, de multiples fichiers de règles (avec le suffix {{Path|.rules}}) sont lus dans l'ordre alphabétique. Dans ces fichiers, udev trouvera des expressions qui peuvent correspondre à un événement uevent avec l'état correspondant (est-ce que l’événement correspond à un ajout ou une suppression de périphérique) et la commande à exécuter.
+=== Persistent device names ===
 
-La mise en correspondance de l'événement se base sur des informations telles que :
+The kernel detects devices asynchronous, udev mirrors the kernel's [[sysfs]] filesystem and so the device are named and numbered in order of detection. So by default udev provides no persistent device names. However there are mechanismen for some device classes to provide these:
 
-* Le ''SOUS-SYSTÈME'' de l'uevent (pour quel type de périphérique l'événement est-il provoqué);
-* L'''ACTION'' qui a lieu (ajout, changement, ou retrait);
-* Un ou plusieurs attributs (via ''ATTR'' ou ''ATTRS''), tels que la classe du périphérique, le vendeur ou tout autre information du périphérique;
-* Le nom fournit par le noyau (via ''KERNEL'') tel que sd* (pour les disques SCSI/ATA) ou input* (pour les périphériques d'entrée comme les souris et les claviers);
-* Un ou plusieurs paramètres d'environnement (via ''ENV''), utilisés pour envoyer des informations partagées par de multiples règles
+* udev creates for storage devices additional symlinks based on the device's id, label, uuid and path. See the {{Path|/dev/disk/by-*}} directory. So instead of using e.g. the device file {{Path|/dev/sda}} use the file {{Path|/dev/disk/by-label/SOME_LABEL}}.
 
-En se basant sur ces informations, la règle peut alors décider si :
+* The same for input devices in the {{Path|/dev/input}} directory.
 
-# Quelques informations doivent être partagées avec des événements ultérieurs (à travers des variables d'environnement) 
-# Des liens doivent être créés dans {{Path|/dev}}
-# Des commandes doivent être exécutées
+* Using custom rules you can create your own device files.
 
-udev accomplit cela pour toutes les règles qui correspondent (il ne cesse donc pas après la première correspondance) pour permettre une approche flexible de la gestion des périphériques.
+== Usage ==
 
-=== Noms de périphérique persistants ===
+Some useful commands are:
 
-Le noyau détecte les périphériques de manière asynchrone, udev reflète le système de fichiers [[sysfs]] et donc les périphériques sont nommés et numérotés selon leur ordre de détection. Ainsi par défaut, udev ne fournit pas de noms persistants. Néanmoins, il existe un mécanisme pour quelques classes de périphériques pour assurer cette fonctionnalité :
-
-* Udev crée, pour les périphériques de stockage, des liens symboliques additionnels en se basant sur l'ID du périphérique, son [[Removable_media#UUIDs_and_labels|étiquette, UUID]] et son chemin. Voir le répertoire {{Path|/dev/disk/by-*}}. Ainsi, au lieu d'utiliser, par exemple, le fichier de périphérique {{Path|/dev/sda}}, utiliser le fichier   {{Path|/dev/disk/by-label/SOME_LABEL}}.
-
-* C'est la même chose pour les périphériques d'entrée dans le répertoire {{Path|/dev/input}}.
-
-* En utilisant des règles personnalisées, l'utilisateur peut créer son propre fichier de périphérique.
-
-== Utilisation ==
-
-Quelques commandes utiles :
-
-* Affiche tous les messages concernant un fichier de périphérique donné :
+* Show all messages about a given device file:
 : {{RootCmd|udevadm info --query{{=}}all --name{{=}}/dev/DEVICE_FILE}}
 
-* Surveiller les activités de udev :
+* Monitor udev activities:
 : {{RootCmd|udevadm monitor}}
 
-<div class="mw-translate-fuzzy">
-* Assigner un nom persistant à un périphérique Ethernet :
-: {{FileBox|filename=/etc/udev/rules.d/ethernet.rules|lang=bash|1=
-SUBSYSTEM=="net", ACTION=="add", ATTR{address}=="01:23:45:67:89:ab", NAME="eth6789ab"
-}}
-</div>
+See the ''udevadm'' [[man page]] for more information.
 
-Se reporter à la [[man page|page de manuel]] de ''udevadm'' pour plus d'information.
-
-== Dépannage ==
+== Troubleshooting ==
 
 * {{Bug|udev|search=package}}
 
-=== Journaliser les messages de surveillance ===
+=== Log monitor messages ===
 
-Pour journaliser tous les messages quand la commande {{c|udevadm monitor}} est exécutée, modifier le fichier de configuration suivant :
+Log all message you see, when you run '''udevadm monitor''':
 
-{{FileBox|filename=/etc/conf.d/udev|lang=bash|1=
+{{File|/etc/conf.d/udev||<pre>
 udev_monitor="YES"
-}}
+</pre>}}
 
-Cela créera le nouveau journal situé à {{Path|/run/udev/udevmonitor.log}}.
+It will create the new log file {{Path|/run/udev/udevmonitor.log}}.
 
-=== Mode de débogage ===
+=== Debug mode ===
 
-Activer le mode de debogage pour obtenir plus de messages journalisés :
+Enable debug mode to get more log messages:
 
-{{FileBox|filename=/etc/conf.d/udev|lang=bash|1=
+{{File|/etc/conf.d/udev||<pre>
 udev_debug="YES"
-}}
+</pre>}}
 
-Définir la priorité de journalisation :
+It will create the new log file {{Path|/run/udev/udevdebug.log}}.
 
-{{FileBox|filename=/etc/udev/udev.conf|lang=bash|1=
-udev_log="debug"
-}}
+=== Missing device files {{Path|/dev/null}} and {{Path|/dev/console}} ===
 
-Cela créera le nouveau journal {{Path|/run/udev/udevdebug.log}} mais aucun message n'y sera écrit. Les version les plus récentes de udev écrirons leurs messages dans {{c|dmesg}}.
-
-=== Fichiers de périphériques manquants {{Path|/dev/null}} et {{Path|/dev/console}} ===
-
-Quelques version de udev ont besoin des fichiers {{Path|/dev/null}} et {{Path|/dev/console}} pour fonctionner correctement, mais ne peuvent pas les créer elles-même. Pour créer ces fichiers manuellement pour udev, exécuter la commande suivant en tant que root :
+Some udev versions need these files and can't create them on their own. So you have to create them:
 
 {{RootCmd
 |mkdir test
@@ -181,23 +176,14 @@ Quelques version de udev ont besoin des fichiers {{Path|/dev/null}} et {{Path|/d
 |rmdir test
 }}
 
-=== NIC (Carte interface réseau) assignée eth0, mais a été déplacée en eth1 ===
+=== NIC assigned eth0, but is moved to eth1 ===
 
-Ceux qui ont des cartes à deux interfaces réseau sur leur carte mère peuvent se retrouver dans une situation où {{c|ifconfig}}  peut ne montrer ni eth0 ni eth1. {{c|dmesg}} peut montrer la carte interface réseau détectée comme eth0, et ensuite déplacée en eth1. Exécuter la commande {{c|ifconfig -a}}  montrerar aussi la carte réseau en tant que eth1. Ceci est dû au fait que les noms assignés par le noyau ont été utilisés en premier lieu. Les utilisateurs doivent écrire leurs propres règles comme {{Path|/etc/udev/rules.d/70-my-network.rules}} pour utiliser des noms libres comme lan0 ou wireless0, ou utiliser les noms d'interfaces prédictibles (qui ont été activés par défaut depuis la version 197 de udev).
+Those having dual network cards on their motherboards may run into a situation where ifconfig may show no eth0 or eth1.  Dmesg may show their NIC detected as eth0, and later moved to eth1. Performing a "ifconfig -a" will also show the NIC as eth1. This is caused by using the kernel assigned names in the first place. You should write your own rules like {{Path|/etc/udev/rules.d/70-my-network.rules}} to
+use free names like lan0 or wireless0 or use the predictable interface names which are enabled by the default since version 197.
 
-Pensez aussi à retirer les anciens fichiers des versions antérieures de udev :
+Remember to also remove old files from old versions of udev:
 
-{{RootCmd|rm /etc/udev/rules.d/70-persistent-net.rules /etc/systemd/network/99-default.link}}
-
-Assurez-vous également de ne pas mettre <code>net.ifnames=0</code> sur la ligne de commande du noyau. Ce paramètre désactiverait complètement la fonctionnalité de noms d'interfaces prévisibles de udev.
-
-== Voir aussi ==
-
-* {{See also|eudev/fr}}
-
-== Ressources externes ==
-
-{{Bug|575718|text=Bug 575718 - Request for council decision regarding virtual/udev default provider}} - Default {{Package|virtual/udev}} provider changed to {{Package|sys-fs/eudev}}
+{{RootCmd|rm /etc/udev/rules.d/70-persistent-net.rules}}
 
 
 [[Category:Core system]]
