--- a/Encfs.mw
+++ b/Encfs.mw
@@ -1,82 +1,55 @@
 {{stub}}
-{{DISPLAYTITLE:EncFS}}
 {{InfoBox stack
-|{{InfoBox homepage|https://vgough.github.io/encfs/|header=true}}
+|{{InfoBox homepage|http://www.arg0.net/encfs|header=true}}
 |{{InfoBox wikipedia|EncFS}}
 |{{InfoBox ohloh|6347}}
 }}
-'''EncFS''' ('''Enc'''rypted '''F'''ile '''S'''ystem) is a userspace encryption method that creates an directory containing encrypted files with hashed filenames.
 
-__TOC__
+'''encfs''' is a simple userspace encryption method that is very simple, and not very secure.  It's good enough to keep the random passerby out.
 
 == Installation ==
-
 === Kernel ===
-
-{{KernelBox|title=Enable FUSE|1=
+{{Kernel|Enable FUSE|<pre>
 File systems  --->
     [*] FUSE (Filesystem in Userspace) support
+</pre>}}
+
+=== Useflags ===
+{{USEflag|package=sys-fs/encfs
+|xattr
 }}
 
-{{Note|When enabling a built-in (non-modular) feature or driver in the kernel remember a recompile will be needed and the new kernel loaded into memory (system reboot) before changes will take effect. This step should be completed ''before'' moving on to other sections in this article.}} 
-
-=== USE flags ===
-
-{{USEflag|package=sys-fs/encfs}}
-
 === Emerge ===
-
 Install {{Package|sys-fs/encfs}}:
-
 {{Emerge|sys-fs/encfs}}
 
 == Configuration ==
-
 === Deployment ===
-
-EncFS makes a hidden directory to store encrypted data then uses FUSE to mount a decrypted directory.
-
-{{Note|Make sure the {{Path|~/}} is empty or non-empty mount point error messages will be present.}}
-
+Encfs makes a hidden directory to store encrypted data, then fuse to mount a decrypted directory.
+{{note|make sure ~/encfs is empty or you will get non empty mount point error messages}}
 {{Cmd|encfs ~/.encfs ~/encfs}}
 
-After running the command setup will ask if a {{Path|.encfs}} directory should be made, press the {{Key|Y}} key then press {{Key|Enter}}. Another question will come up regarding setting up the encryption scheme, etc. Press {{Key|Enter}} to accept defaults. Enter the password to the prompt twice to finish the set up process.
+After running the command setup will ask you if .encfs should be made, type Y and hit enter.
+another question will come up regarding setting up encryption scheme etc.  press enter to accept defaults.
 
-Once finished encrypted files can be fed to {{Path|~/encfs}}
+Enter the password to the prompt twice and you're done.  You're ready to feed to be encrypted files to ~/encfs
 
 === Locking ===
-
-The {{c|fusermount}} command can be used to unmount FUSE file systems. To unmount the FUSE decrypted directory run:
-
+To unmount the fuse decrypted directory:
 {{Cmd|fusermount -u ~/encfs}}
 
-Remember that the files located in {{Path|~/encfs}} will not be available while it is unmounted.
-
 === Unlocking ===
-
-To mount the decrypted FUSE directory use the {{c|encfs}} command:
-
+To mount the decrypted fuse directory:
 {{Cmd|encfs ~/.encfs ~/encfs}}
 
-Running this command will make encrypted files located in {{Path|~/.encfs}} available in the {{Path|~/encfs}} directory.
+== Examples ==
+mkultra@spaceball-1 ~ $ ls encfs/<br />
+foo  bar<br />
+mkultra@spaceball-1 ~ $ ls .encfs/<br />
+OtyK9QEW3,1a1qnC5Um5tc-S  s9CN,iacV1bM5SxN1TOI8JB2<br />
 
-== Usage ==
-
-=== Examples ===
-
-Running a simple {{c|ls}} on the {{Path|~/encfs}} directory while the decrypted FUSE file system is mounted will display all the files that were fed into the EncFS storage area:
-
-{{Cmd|ls ~/encfs|output=<pre>
-foo bar</pre>}}
-
-Running {{c|ls}} on the {{Path|~/.encfs}} directory will output hash encrypted filenames:
-
-{{Cmd|ls ~/.encfs|output=<pre>
-OtyK9QEW3,1a1qnC5Um5tc-S  s9CN,iacV1bM5SxN1TOI8JB2</pre>}}
-
-== External resources ==
-
-https://wiki.archlinux.org/index.php/EncFS - EncFS on the Arch wiki.
+== External Resources ==
+[https://wiki.archlinux.org/index.php/EncFS encfs on arch's wiki]
 
 [[Category:Filesystems]]
 [[Category:Security]]
