Created page with "== Install debugging information and sources for selected packages ==  To install debugging information you can use the <code>splitdebug</code> feature (or alternatively the <..."

--- a/Debugging.mw
+++ b/Debugging.mw
@@ -1,95 +1,26 @@
-{{Stub}}
+== Install debugging information and sources for selected packages ==
 
-== Don't strip symbols ==
+To install debugging information you can use the <code>splitdebug</code> feature (or alternatively the <code>nostrip</code> feature and to install the source code you need the <code>installsources</code> feature which in turn requires the {{Package|dev-util/debugedit}}. These features are integrated so they provide you with an environment where {{Package|sys-devel/gdb}} can find both the debugging information and the sources and lets you fully use its interactive debugging features.
 
-As a first step, you may want to keep symbols in elf files by the <code>nostrip</code> [[FEATURES|FEATURE]].
-
-That way, all functions in the code will keep their name and e.g. {{Package|sys-devel/gdb}} can then show names in a backtrace instead of function addresses only.
-
-{{FileBox|filename=/etc/portage/make.conf|title=Keep all ELF symbols in each binary|lang=bash|1=
-FEATURES="nostrip"
-}}
-
-== Install debugging information ==
-
-To install debugging information you can use the <code>splitdebug</code> feature. Furthermore, to install the source code you can activate the <code>installsources</code> feature which in turn requires the {{Package|dev-util/debugedit}}. These features are integrated so they provide you with an environment where {{Package|sys-devel/gdb}} can find both the debugging information and the sources and lets you fully use its interactive debugging features.
-
-If <code>nostrip</code> is in your default [[FEATURES]], <code>splitdebug</code> won't do anything, so we disable it for debug-packages!
-
-{{FileBox|filename=[[:/etc/portage/env|/etc/portage/env/debugsyms]]|lang=bash|1=
+{{File|/etc/portage/env/debug||<pre>
 CFLAGS="${CFLAGS} -ggdb"
-CXXFLAGS="${CXXFLAGS} -ggdb"
-FEATURES="${FEATURES} splitdebug compressdebug -nostrip"
-}}
+FEATURES="${FEATURES} splitdebug installsources"
+</pre>}}
 
-{{FileBox|filename=[[:/etc/portage/env|/etc/portage/env/installsources]]|lang=bash|1=
-FEATURES="${FEATURES} installsources"
-}}
+{{File|/etc/portage/package.env||<pre>
+category/your-package debug
+</pre>}}
 
-{{emerge|dev-util/debugedit sys-devel/gdb}}
+{{RootCmd|emerge dev-util/debugedit sys-devel/gdb}}
 
-Then you can activate those new "environments" for packages you need the sources and/or debug info:
-
-{{FileBox|filename=[[:/etc/portage/package.env]]|1=
-category/some-package debugsyms
-category/some-library debugsyms installsources
-}}
-
-{{emerge|params+=--oneshot|category/some-package category/some-library}}
-
-Now, if you debug program with gdb it will find the sources and debugging infos.
-
-{{CodeBox|title=Example gdb session for debugging {{Package|dev-util/radare2}}|1=
-% gdb --args r2 /bin/ls
-Reading symbols from r2...Reading symbols from /usr/lib64/debug//usr/bin/radare2.debug...done.
-done.
-= gdb>> break main
-Breakpoint 1 at 0x2e70: file radare2.c, line 372.
-= gdb>> run
-Starting program: /usr/bin/r2 /bin/ls
-
-Breakpoint 1, main (argc=2, argv=0x7fffffffdd98, envp=0x7fffffffddb0) at radare2.c:372
-372    int main(int argc, char **argv, char **envp) {
-= gdb>> ...etc
-}}
+{{RootCmd|emerge --oneshot category/your-package}}
 
 == Valgrind ==
 
-Valgrind often needs debug information of the c-library to perform function redirection.
-For this, [[#Install_debugging_information|create the package debug environment described above]]
-and apply it for {{Package|sys-libs/glibc}}.
+You often need to have gcc debug information in order to run valgrind on any binary at all. It can be useful for other tasks as well.
 
-{{FileBox|filename=[[:/etc/portage/package.env]]|1=
-sys-libs/glibc debugsyms installsources
-}}
+{{File|/etc/portage/package.env||<pre>
+sys-libs/glibc debug
+</pre>}}
 
-{{emerge|params+=--oneshot|sys-libs/glibc}}
-
-You should also [[#Don.27t_strip_symbols|stop stripping symbols for all packages]] to get meaningful backtraces.
-
-You may have an extended debugging experience if you also [[#Install_debugging_information|activate debug symbols]] for the program you want to check (for local projects, build them with <code>-Og -ggdb</code>).
-
-=== Troubleshooting ===
-
-It is possible that valgrind refuses to launch with an error containing the following.
-<pre>
-valgrind:  A must-be-redirected function                        
-valgrind:  whose name matches the pattern:      strlen          
-valgrind:  in an object with soname matching:   ld-linux-x86-64.so.2 
-</pre>
-
-In this case, you need to add <code>-fno-builtin-strlen</code> to <code>CFLAGS</code> for <code>glibc</code>:
-
-{{FileBox|filename=[[:/etc/portage/env|/etc/portage/env/strlen]]|lang=bash|1=
-CFLAGS="${CFLAGS} -fno-builtin-strlen"
-}}
-
-{{FileBox|filename=[[:/etc/portage|/etc/portage/package.env]]|lang=bash|1=
-sys-libs/glibc strlen
-}}
-
-== See also ==
-
-* [[Project:Quality_Assurance/Backtraces#debug_USE_flag|Project:Quality Assurance/Backtraces 1.4 debug USE flag]]
-
-== References ==
+{{RootCmd|emerge --oneshot sys-libs/glibc}}
