Initial page/work in progress

--- a/Gnome_Applications_Folders.mw
+++ b/Gnome_Applications_Folders.mw
@@ -1,19 +1,19 @@
 GNOME Configure your applications folders
 '''Applications folders''' are the GNOME the containers for applications.
 
-== Introduction ==
+= Introduction =
 
 By default in Gentoo there is no application folder and all applications are either showing in a single container without further organization than being presented in alphabetic order, either they are elected as favorites and are showing in the dash (left-side bar).
 
-This is unsatisfactory for most people since as the number of applications is growing it becomes always harder and tedious to find out the application you want to launch. Hence, the solution is to organize the applications by subsets similar to the sub-menus in previous major version of Gnome or the Applications menu you can get using shell extensions.
+This is unsatisfactory for most people since as the number of applications is growing it becomes always harder and tedious to find out the application you want to lauch. Hence, the solution is to organize the applications by subsets similar to the submenus in previous major version of Gnome or the Applications menu you can get using shell extensions.
 
 Our goal is to present you how you can customize your desktop and organize your applications without using the shell extensions and menus.
 
-=== Gsettings and desktop schemas ===
+== Gsettings and desktop schemas ==
 
-Your desktop is controlled by a set of XML files and schemas. You can use the {{c|dconf}} application to configure partly your applications, however for full customization the command line {{c|gsettings}} command is recommended.
+Your desktop is controlled by a set of XML files and schemas. You can use the dconf application to configure partly your applications, however for full customization the command line gsettings command is recommended.
 
-First of all, to add containers for applications, which are actually called folders, you will need to edit the key <code>org.gnome.desktop.app-folders</code>. You can access this key and update the value through {{c|dconf}} by following the specified schema, <code>org.gnome.desktop.app-folders</code> namely. The value is a list of strings between square brackets and separated by a comma. Here is how to add the folders Office, SysAdmin and Internet after checking the list is actually empty.
+First of all, to add containers for applications, which are actually called folders, you will need to edit the key org.gnome.desktop.app-folders. You can access this key and update the value through dconf by following the specified schema, org.gnome.desktop.app-folders namely. The value is a list of strings between square brackets and separated by a comma. Here is how to add the folders Office, SysAdmin and Internet after checking the list is actually empty.
 
 {{Cmd|gsettings get org.gnome.desktop.app-folders folder-children}}
 
@@ -39,9 +39,9 @@ Then,
 
 {{Cmd|gsettings set org.gnome.desktop.app-folders.folder:/org/gnome/desktop/app-folders/folders/SysAdmin/ translate true}}
 
-The value in the first command (System-Tools.directory) must be an existing file which can be found either in the {{Path|/usr/share/desktop-directories}} directory, either in {{Path|$HOME/.local/share/desktop-directories}} directory with the following format:
+The value in the first command (System-Tools.directory) must be an existing file which can be found either in the /usr/share/desktop-directories directory, either in $HOME/.local/share/desktop-directories directory with the following format:
 
-{{FileBox|filename=/usr/share/desktop-directories/System-Tools.directory|title=Sample file content|lang=ini|1=
+{{File|/usr/share/desktop-directories/System-Tools.directory|Sample file content|<pre>
 [Desktop Entry]
 Name=System Tools
 Name[fr]=Outils système
@@ -49,57 +49,9 @@ Comment=System configuration and monitoring
 Comment[fr]=Configuration et surveillance système
 Icon=applications-system
 Type=Directory
+</pre>
 }}
 
-The format is the Free desktop XDG format as documented [https://specifications.freedesktop.org/autostart-spec/autostart-spec-latest.html here].
+The format is the Free desktop XDG format as documented [http://standards.freedesktop.org/autostart-spec/autostart-spec-latest.html here].
 
-The second command informs Gnome 3 the value is not a fixed string value and it is rather than a file with translations.
-
-=== Adding content to applications folders ===
-
-To add content to your newly created folders you have two options:
-
-# Select by categories which applications you want to add
-# Select individually each application you want to add
-
-==== By categories ====
-
-To select by categories you simply change the value of the categories key to a list of applications. The categories' names are those specified in the stanza Categories in the XDG desktop definition files. You can look at these as well as the list of available applications in directories: {{Path|/usr/share/applications and $HOME/.local/share/applications}}.
-
-Then, suppose we want to add all the applications in the identified category Office and those in the category Publishing in the Office folder you proceed as follow:
-
-{{Cmd|gsettings  set org.gnome.desktop.app-folders.folder:/org/gnome/desktop/app-folders/folders/Office/ categories "['Office', 'Publishing']"}}
-
-==== Individually ====
-
-To select by the application name you use the XDG desktop definition file name. For example, suppose we want to add the applications Gnumeric, Evolution and Contacts to our folder {{Path|Office}} we issue the following command given the files: {{Path|gnumeric.desktop}}, {{Path|evolution.desktop}} and {{Path|gnome-contacts.desktop}} exists in one of the valid directories:
-
-{{Cmd|gsettings set org.gnome.desktop.app-folders.folder:/org/gnome/desktop/app-folders/folders/Office/ apps "['gnumeric.desktop', 'evolution.desktop', 'gnome-contacts.desktop']"}}
-
-==== Exclusions ====
-
-What if you want almost all applications in one or more categories except few of them? You can simply specify an exclusion list using the key excluded-apps. For example, suppose we want to exclude Acrobat Reader from the Office folder:
-
-{{Cmd|gsettings set org.gnome.desktop.app-folders.folder:/org/gnome/desktop/app-folders/folders/Office/ excluded-apps "['AdobeReader.desktop']"}}
-
-==== Inclusions ====
-
-Using both the individual and by categories selection, you can add individually applications to a set of categories in a folder.
-
-==== Tile icon ====
-
-The tile icon will update itself using a smaller version of the icons for the applications in the given folder. There is nothing you need to do for that to happen. It may take a while however before the tile get updated.
-
-<gallery>
-File:NoAF.png|Original applications folder.
-File:EmptiesAF.png|Three applications folders newly created without any label assigned to them.
-File:EmptyAFwithName.png|The SysAdmin applications folder with the static label "System tools" assigned to it.
-File:EmptyAFwithTransName.png|The SysAdmin applications folder with a translated label assigned to it. Showing in french here.
-File:AFwithCategories.png|The Office applications folder with the two categories Office and Publishing assigned to it, showing the content.
-File:AFwithList.png|The applications folder Office with a list of three applications assigned to it.
-File:AFwithExclusion.png|The applications folder Office with the Acrobat Reader application excluded.
-File:AFwithCategories+List.png|The application folder Office with categories Office and Publishing assigned to it in addition with the three previous applications.
-File:AFwithIcons.png|The application folder Office, labeled in french "Bureautique", showing the icons on the tile.
-</gallery>
-
-[[Category:GNOME]]
+The second command inform Gnome 3 the value is not a fixed string value and it is rather than a file with translations.
